// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersControlpanelUser renders a UsersControlpanelUser component 1`] = `
<tr
  className=""
>
  <td
    className="fullname"
  >
    Test User
     
    (
    testuser
    )
  </td>
  <td
    className=""
  >
    <div
      className="ui checked fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        disabled={false}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value="testuser&role=Member"
      />
      <label />
    </div>
  </td>
  <td
    className=""
  >
    <div
      className="ui fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        disabled={false}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value="testuser&role=Reader"
      />
      <label />
    </div>
  </td>
  <td
    className=""
  >
    <div
      className="ui fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        disabled={false}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value="testuser&role=Manager"
      />
      <label />
    </div>
  </td>
  <td
    className="right aligned"
  >
    <div
      aria-expanded={false}
      className="ui dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <i
        aria-hidden="true"
        className="ellipsis horizontal icon"
        onClick={[Function]}
      />
      <div
        className="menu transition left"
      >
        <div
          className="item"
          id="delete-user-button"
          onClick={[Function]}
          role="option"
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "15px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
          Delete
        </div>
      </div>
    </div>
  </td>
</tr>
`;

exports[`UsersControlpanelUser renders a UsersControlpanelUser component with options disabled if not allowed 1`] = `
<tr
  className=""
>
  <td
    className="fullname"
  >
    Test User
     
    (
    testuser
    )
  </td>
  <td
    className=""
  >
    <div
      className="ui checked fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        disabled={false}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value="testuser&role=Member"
      />
      <label />
    </div>
  </td>
  <td
    className=""
  >
    <div
      className="ui fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        disabled={false}
        readOnly={true}
        tabIndex={0}
        type="checkbox"
        value="testuser&role=Reader"
      />
      <label />
    </div>
  </td>
  <td
    className=""
  >
    <div
      className="ui disabled fitted checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        disabled={true}
        readOnly={true}
        tabIndex={-1}
        type="checkbox"
        value="testuser&role=Manager"
      />
      <label />
    </div>
  </td>
  <td
    className="right aligned"
  >
    <div
      aria-expanded={false}
      className="ui dropdown"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <i
        aria-hidden="true"
        className="ellipsis horizontal icon"
        onClick={[Function]}
      />
      <div
        className="menu transition left"
      >
        <div
          className="item"
          id="delete-user-button"
          onClick={[Function]}
          role="option"
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "15px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
          Delete
        </div>
      </div>
    </div>
  </td>
</tr>
`;
